--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,23 @@ body{
 /* header */
 header{
     height: 80px;
-    padding: 0 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border: 1px solid black;
+    padding: 0 50px;
 }
 
 h1{
     font-size: 50px;
     color: rgb(255, 0, 0);
+}
+
+.right-side{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
 }
 
 button{
@@ -47,6 +54,11 @@ button:hover{
     margin: 0px auto;
     display: flex;
     flex-wrap: wrap;
+}
+
+.block{
+    display: block;
+    display: flex;
 }
 
 .square{
